Fix for recent appearance dates on mobile
comments between data elements to remove gap between block when inline

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -100,28 +100,39 @@ a, a:hover, a:active {
     dd {
         border-bottom: 1px dotted $borders;
         .appearance-date {
-            min-width: 4em;
-            float: left;
             font-weight: bold;
-            text-align: center;
-            margin-right: em-calc(16);
             .day {
+                display: inline-block;
                 border: 1px solid $borders;
-                border-bottom: none;
-                display: block;
+                border-right: none;
             }
             .month {
+                display: inline-block;
                 color: white;
                 background-color: $brand;
                 border: 1px solid $borders;
-                display: block;
                 padding-left: 0.2em;
                 padding-right: 0.2em;
             }
         }
-
-        p {
-            margin-left: 5em;
+        @media #{$small} {
+            .appearance-date {
+                min-width: 4em;
+                float: left;
+                text-align: center;
+                margin-right: em-calc(16);
+                .day {
+                    display: block;
+                    border-right: 1px solid $borders;
+                    border-bottom: none;
+                }
+                .month {
+                    display: block;
+                }
+            }
+            p {
+                margin-left: 5em;
+            }
         }
     }
 }
